--- a/Calendario2021/indexL.html
+++ b/Calendario2021/indexL.html
@@ -427,7 +427,8 @@
                                                     <li><font
  face="Helvetica, Arial, sans-serif" size="-1">Presentación de las                </font>
 													<font size="-1" face="Arial,Helvetica">
-													<a href="Politicas/PoliticasCisco2021_L.docx">políticas del Taller de redes</a></font><font face="Helvetica, Arial, sans-serif"
+													<a href="Politicas/PoliticasCisco2021_L.docx">políticas del 
+													laboratorio</a></font><font face="Helvetica, Arial, sans-serif"
  size="-1">, temario y forma de trabajo</font></li>
                                                                         
                                                                         
