--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -468,7 +468,7 @@
                                        <li>                             
                              		  <font
  size="-1" face="Arial,Helvetica"><b>Material de clase:                                     </b>
-									   <a href="Presentaciones/2_Direccionamiento.pptx">2. Direccionamiento</a></font></li>
+									   <a href="Presentaciones/2_Direccionamiento.pptx">2. Direccionamiento</a> </font></li>
 									   <li>                             
 									   <font
  size="-1" face="Arial,Helvetica"><b>Ejercicio: </b>
@@ -487,7 +487,9 @@
                                                     <li class="auto-style28">
 													<strong>Tarea 1: </strong>
 													<a href="https://experiencia21.tec.mx/courses/126523/quizzes/823846?module_item_id=6632048">
-													Esquemas de direccionamiento</a></li>
+													Esquemas de direccionamiento</a> 
+													(Fecha límite: Viernes 12 de 
+													Febrero hasta las 6:00 p.m.)</li>
 													<li class="auto-style28">
 													<font
  face="Helvetica, Arial, sans-serif" size="-1" color="#663366">
