--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -489,7 +489,7 @@
 													<a href="https://experiencia21.tec.mx/courses/126523/quizzes/823846?module_item_id=6632048">
 													Esquemas de direccionamiento</a> 
 													(Fecha límite: Viernes 12 de 
-													Febrero hasta las 6:00 p.m.)</li>
+													Febrero hasta las 11:59 p.m.)</li>
 													<li class="auto-style28">
 													<font
  face="Helvetica, Arial, sans-serif" size="-1" color="#663366">
@@ -562,7 +562,7 @@
 													<strong>Autoestudio: 
 													</strong>
 													Capítulo 
-													1. Routing Concepts</span></font><b><a href="https://experiencia21.tec.mx/courses/126523/pages/autoestudio-previo-a-la-clase-4?module_item_id=5733061"></li></a></b></ul>
+													1. Conceptos de routing</span></font></li></ul>
 											  </font><b>
 											  <font size="-1" color="#663366" face="Tahoma">
 											  Durante la sesión:</font></b> 
@@ -625,8 +625,8 @@
                                                                         
                                                                         
                                                     <li><font size="-1"
- face="Helvetica, Arial, sans-serif" color="#000000"><b>Chapter 1. Routing 
-													Concepts</b></font></li>
+ face="Helvetica, Arial, sans-serif" color="#000000"><b>Capítulo 1. 
+													Conceptos de routing</b></font></li>
 													<li class="auto-style25">
 													<strong>Laboratorio 2:</strong> 
 													Configuración de una red con 
