--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -638,10 +638,15 @@
 													Conceptos de routing</b></font></li>
 													<li class="auto-style25">
 													<strong>Laboratorio 2:</strong> 
-													Configuración de una red con 
+													<a href="Laboratorios/1.1.4.6%20Configuring%20Basic%20Router%20Settings%20with%20IOS%20CLI.docx">Configuración de una red con 
 													acceso remoto vía el 
 													protocolo SSH
+													</a>
 													</li>
+													<li class="auto-style25">
+													<strong>Archivo pkt:</strong>
+													<a href="Laboratorios/Lab_1.1.4.6.pkt">
+													Lab 1.1.4.6</a></li>
                                                                         
                                                                         
                                                     <li><b><font
