--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -193,6 +193,11 @@
 	font-size: -1;
 }
 
+  .auto-style58 {
+	font-family: Arial, Helvetica;
+	font-size: -1;
+}
+
   </style>
 </head>
   <body>
@@ -1564,8 +1569,18 @@
                                                                
       										<ul>
 												<li>
+									   <font
+ size="-1" face="Arial,Helvetica"><b>Material de clase:                                </b>
+									   		 <a href="Presentaciones/5_Protocolos_ruteo.pptx">
+												5. Protocolos de ruteo</a></font></li>
+												<li>
 												<font
- size="-1" face="Arial,Helvetica"><b>Ejercicio 5: </b>Migración de RIP a EIGRP</font></li>
+ size="-1" face="Arial,Helvetica"><b>Ejercicio 5: </b>
+												<a href="https://experiencia21.tec.mx/courses/126523/pages/ejercicio-5-migracion-de-rip-a-eigrp">Migración de RIP a EIGRP</a></font></li>
+												<li class="auto-style58">
+									   <font
+ size="-1" face="Arial,Helvetica"><b>Ejercicios de clase: </b>
+									   		 <a href="Actividades/EjerciciosClase_Subredes.docx">Esquemas de direccionamiento</a></font></li>
 												<li class="auto-style55">
 												<font
  size="-1" face="Arial,Helvetica"><strong>Examen rápido 3</strong></font></li>
