--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -1571,12 +1571,13 @@
 												<li>
 												<font
  size="-1" face="Arial,Helvetica"><b>Ejercicio 5: </b>
-												<a href="https://experiencia21.tec.mx/courses/126523/pages/ejercicio-5-migracion-de-rip-a-eigrp">Migración de RIP a EIGRP</a></font></li>
-												<li>
-												<font
+												<a href="Ejercicios/Ejercicio5/Ejercicio5_RuteoDinamico.pdf">Migración de RIP a EIGRP</a></font><ul>
+													<li>
+													<font
  size="-1" face="Arial,Helvetica"><b>ArchivoPkt: </b>
-												<a href="Ejercicios/Ejercicio5/Ejer5.pkt">
-												Ejer5.pkt</a></font></li>
+													<a href="Ejercicios/Ejercicio5/Ejer5.pkt">Ejer5.pkt</a></font></li>
+												</ul>
+												</li>
 												<li>
 												<font
  size="-1" face="Arial,Helvetica"><b>Ejercicios de clase: </b>
