--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -193,6 +193,10 @@
 	font-size: -1;
 }
 
+  .auto-style58 {
+	font-size: small;
+}
+
   </style>
 </head>
   <body>
@@ -2273,7 +2277,7 @@
 													<strong>Autoestudio. 
 													</strong>
 													Capítulo 
-													4. Redes conmutadas</span></font></ul>
+													4. Switched networks</span></font></ul>
 											  </font><b><font
  size="-1" color="#663366" face="Tahoma">Durante la sesión:</font></b><span class="auto-style28">      
                                                                         
@@ -2312,10 +2316,27 @@
                                                     <li><b><font
  size="-1" face="Helvetica, Arial, sans-serif">Capítulo 4. Redes conmutadas</font></b></li>
 													<li>
+									   <font
+ size="-1" face="Arial,Helvetica"><b>Material de clase:                                </b>
+									   			 <a href="CISCO/Capitulo4.pdf">4. 
+													Switched networks</a></font></li>
+													<li>
 													<font
- size="-1" face="Helvetica, Arial, sans-serif"><strong>Laboratorio 6: </strong>Configuración de 
+ size="-1" face="Helvetica, Arial, sans-serif"><strong>Laboratorio 6: </strong>
+													<a href="Laboratorios/Laboratorio6/Laboratorio6.docx">Configuración de 
 													una red con tráfico 
-													convergente y VLSM</font></li>
+													convergente</a></font><ul>
+														<li>
+														<font
+ size="-1" face="Arial,Helvetica"><strong>Archivo pkt:</strong>
+														<a href="Laboratorios/Laboratorio6/Lab6.pkt">
+														Lab6.pkt</a></font></li>
+														<li><strong>
+														<span class="auto-style58">Comandos:</span></strong>
+														<a href="Laboratorios/Comandos.pdf">
+														<span class="auto-style58">Comandos</span></a></li>
+													</ul>
+													</li>
 													<li>
 													<b>
 													<font
