--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -3596,7 +3596,16 @@
 													<li>
 													<font
  size="-1" face="Helvetica, Arial, sans-serif"><strong>Laboratorio 8: </strong>
-													Configuración de VLANs </font></li>
+													<a href="Laboratorios/Laboratorio8/6.3.3.7%20Configuring%20802.1Q%20Trunk-Based%20Inter-VLAN%20Routing.docx">Configuración de VLANs 
+													</a> </font>
+													<ul>
+														<li class="auto-style28">
+														<a href="Laboratorios/Comandos.pdf">
+														<span class="auto-style25">Comandos</span></a></li>
+														<li class="auto-style25">
+														<a href="Ejercicios/Ejercicio9/ComandosBasicosVLANs.txt">ComandosBasicosVLANs.txt</a></li>
+													</ul>
+													</li>
 													<li>
 													<b>
 													<font
