--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -3725,11 +3725,11 @@
                                        <li class="auto-style6">
 									   <font
  size="-1" face="Arial,Helvetica"><b>Ejercicio 10: </b>
-									   Configuración de los 
+									   <a href="Ejercicios/Ejercicio10/Ejercicio10_VLSM.docx">Configuración de los 
 									   equipos de interconexión de una red 
-									   utilzando VLSM<ul>
+									   utilzando VLSM</a><ul>
 										   <li class="auto-style56">
-										   <a href="Ejercicios/Ejercicio10/Ejer10_sol.pkt">Ejer10.pkt</a></li>
+										   <a href="Ejercicios/Ejercicio10/Ejercicio10.pkt">Ejercicio10.pkt</a></li>
 										   <li class="auto-style57">
 										   <a href="Ejercicios/Ejercicio10/Ejer10.txt">Ejer10.txt</a></li>
 									   </ul>
