--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -5770,10 +5770,12 @@
                                                     <li>
 													<font
  size="-1" face="Helvetica, Arial, sans-serif"><b>Ejercicios de repaso:</b> 
-													<a href="Actividades/Repaso2/EjerciciosRepasoParcial2.docx">Segundo examen parcial</a></font></li>
-													<li class="auto-style25">
-													<a href="Actividades/Repaso2/Repaso2.pkt">
-													Repaso2.pkt</a></li>
+													<a href="Actividades/Repaso2/EjerciciosRepasoParcial2.docx">Segundo examen parcial</a></font><ul>
+														<li class="auto-style25">
+														<a href="Actividades/Repaso2/Repaso2.pkt">
+														Repaso2.pkt</a></li>
+													</ul>
+													</li>
 													</span>
                                                                         
                                                                         
