--- a/Calendario2021/Examenes/Parcial2/parcial2.html
+++ b/Calendario2021/Examenes/Parcial2/parcial2.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<p><img src="img2.jpg" /></p>
+<p><img src="img2.jpg" /><img src="img6.jpg" /></p>
 <p><img src="img4.jpg" /></p>
 <p><img src="img5.jpg" /></p>
 
