--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -249,6 +249,19 @@
 	font-size: small;
 }
 
+  .auto-style69 {
+	color: #000000;
+	font-weight: normal;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: -1;
+}
+.auto-style70 {
+	color: #000000;
+	font-weight: normal;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: small;
+}
+
   </style>
 </head>
   <body>
@@ -7444,7 +7457,16 @@
 									   Práctica integradora: </span>
 									   			 <span class="auto-style27">
 													<a href="https://experiencia21.tec.mx/courses/126523/pages/practica-integradora?module_item_id=7200089">Interconexión de protocolos de ruteo 
-									   distintos</a></span></font></li>
+									   distintos</a></span></font><ul>
+														<li class="auto-style70">
+														<a href="Ejercicios/Ejercicio17/Archivos/Ejer17.pkt">
+														Ejer17.pkt</a></li>
+														<li class="auto-style69">
+														<a href="Ejercicios/Ejercicio17/Archivos/Ejer17.txt">
+														<span class="auto-style25">
+														Ejer17.txt</span></a></li>
+													</ul>
+													</li>
 													</span>
                                                                         
                                                                         
