--- a/Calendario2021/index.html
+++ b/Calendario2021/index.html
@@ -262,13 +262,7 @@
 	font-size: small;
 }
 
-  .auto-style71 {
-	color: #000000;
-	font-weight: normal;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: -1;
-}
-.auto-style72 {
+  .auto-style72 {
 	color: #000000;
 	font-weight: normal;
 	font-family: Arial, Helvetica, sans-serif;
@@ -7697,13 +7691,8 @@
 														</span>
 														<span class="auto-style51">
 														<li class="auto-style72">
-														<a href="Ejercicios/Ejercicio18/RGuadalajara.txt">
-														RGuadalajara.txt</a></li>
-														<span class="auto-style58">
-														<li class="auto-style71">
-														<a href="Ejercicios/Ejercicio18/RQueretaro.txt">
-														RQueretaro.txt</a></span></span></li>
-													</ul>
+														<a href="Ejercicios/Ejercicio18/Ejer18.txt">
+														Ejer18.txt</a></span></ul>
 													</li>
                                                                         
                                                                         
