--- a/Calendario2021/Examenes/fin/fin.html
+++ b/Calendario2021/Examenes/fin/fin.html
@@ -3,15 +3,13 @@
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>Untitled 2</title>
+<title>Untitled 1</title>
 </head>
 
 <body>
 
-<p><img src="img2.jpg" /></p>
+<p><img alt="" src="img6.jpg" /></p>
 <p><img src="img3.jpg" /></p>
-<p><img src="img6.jpg" /></p>
-<p><img src="img5.jpg" /></p>
 
 </body>
 
