--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -6829,8 +6829,7 @@
                                        <li class="auto-style6">
 									   <font
  size="-1" face="Helvetica, Arial, sans-serif">
-									   <a href="https://experiencia21.tec.mx/courses/126523/assignments/4179457">
-									   <strong>Caso de estudio</strong></a></font><ul>
+									   <a href="https://experiencia21.tec.mx/courses/187077/modules/items/9040036">Caso de estudio</a></font><ul>
 										   <li class="auto-style67">
 										   <a href="Retos/CasoEstudio/caso_matricula.pkt">
 										   <span class="auto-style58">
@@ -7435,10 +7434,12 @@
 													<font
  size="-1" face="Helvetica, Arial, sans-serif">Ejercicio 16:
 													<span class="auto-style27">
-													<a href="Ejercicios/Ejercicio16/Ejer16.pdf">PAT PortForwarding</a></span></font></span></li>
-									   <li class="auto-style67">
-									   <a href="Ejercicios/Ejercicio16/Ejer16_PAT.pkt">
-									   <span class="auto-style25">Ejer16.pkt</span></a></li>
+													<a href="Ejercicios/Ejercicio16/Ejer16.pdf">PAT PortForwarding</a></span></font></span><ul>
+													<li class="auto-style67">
+													<a href="Ejercicios/Ejercicio16/Ejer16_PAT.pkt">
+													<span class="auto-style25">Ejer16.pkt</span></a></li>
+												</ul>
+									   </li>
 									   <li class="auto-style67">
 									   <font color="#663366" face="Helvetica, Arial, sans-serif" size="-1">
 									   <span class="auto-style28">
@@ -7756,7 +7757,7 @@
  size="-1" face="Helvetica, Arial, sans-serif"><span class="auto-style51">
 									   			 Ejercicio 17: </span>
 									   			 <span class="auto-style27">
-													<a href="https://experiencia21.tec.mx/courses/126523/pages/practica-integradora?module_item_id=7200089">Interconexión de protocolos de ruteo 
+													<a href="https://experiencia21.tec.mx/courses/187077/modules/items/9040044">Interconexión de protocolos de ruteo 
 									   distintos</a></span></font><ul>
 														<li class="auto-style70">
 														<a href="Ejercicios/Ejercicio17/Archivos/Ejer17.pkt">
@@ -7799,8 +7800,7 @@
 													<li class="auto-style6">
 													<font face="Helvetica, Arial, sans-serif" size="-1">
 													<span class="auto-style27">
-													<a href="https://experiencia21.tec.mx/courses/126523/assignments/4179457">
-													Caso de estudio</a></span>
+													<a href="https://experiencia21.tec.mx/courses/187077/modules/items/9040036">Caso de estudio</a></span>
 													<span class="auto-style27">
 													Fecha de entrega: Jueves 18 
 													de Noviembre hasta las 23:59 
@@ -8023,7 +8023,7 @@
 													<font
  size="-1" face="Helvetica, Arial, sans-serif">Ejercicio 18:
 													<span class="auto-style27">
-													<a href="https://experiencia21.tec.mx/courses/126523/pages/ejercicio-18-interconexion-de-protocolos-de-ruteo?module_item_id=7217698">Interconexión de protocolos 
+													<a href="https://experiencia21.tec.mx/courses/187077/modules/items/9040048">Interconexión de protocolos 
 													de ruteo distintos</a></span></font></span><ul>
 														<li class="auto-style69">
 														<span class="auto-style58">
@@ -8095,8 +8095,7 @@
 					 <font color="#663366" face="Tahoma" size="-1">
 					 <ul>
 						 <li class="auto-style73"><font color="#663366">
-						 <a href="../Calendario2021/Actividades/Repaso_Final/EjerciciosRepaso_Final.docx">
-						 Ejercicios de repaso</a></font></li>
+						 <a href="Actividades/Repaso_Final/EjerciciosRepaso_Final.docx">Ejercicios de repaso</a></font></li>
 					 </ul>
 					 </font></div>
 				   </span></td>
