--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -570,7 +570,7 @@
 													<span class="auto-style25">
 													<strong>Laboratorio 1:
 													</strong>
-													<a href="Laboratorios/Laboratorio1/Lab1.docx">Configuración de equipos de 
+													<a href="Laboratorios/Laboratorio1/Lab1.html">Configuración de equipos de 
 													interconexión</a></span></li>
                                                                         
         
