--- a/CalendarioAgo21/Laboratorios/Laboratorio1/Lab1.html
+++ b/CalendarioAgo21/Laboratorios/Laboratorio1/Lab1.html
@@ -1366,8 +1366,8 @@
 			 </ul>
 			 <li class="auto-style26"><font size="-1">Ejecuta la aplicación de
 			 <strong>Packet Tracer</strong>, y en caso de ser necesario la 
-			 cuenta y password de netacad, parar realizar el diseño físico de 
-			 red siguiente red: </font>
+			 cuenta y password de netacad, para realizar el diseño físico de 
+			 la siguiente red: </font>
 		 </ul>
                                  
       </ul>
