--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -731,8 +731,7 @@
 									   <li>
 									   <font
  size="-1" face="Arial,Helvetica"><b>Actividad 1: </b>
-									   <a href="Actividades/FormatoActividad1.docx">
-									   Creación de subredes</a></font></li>
+									   <a href="Actividades/Actividad1/FormatoActividad1.docx">Creación de subredes</a></font></li>
 									   <li class="auto-style55">
 									   <font
  size="-1" face="Arial,Helvetica"><strong>Examen rápido 1</strong></font></ul>
