--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -780,9 +780,17 @@
 													1. Conceptos de ruteo</a></font></li>
 													<li class="auto-style25">
 													<strong>Laboratorio 2:</strong> 
-													Configuración de una red con 
+													</li>
+													<li class="auto-style25">
+													<strong>Presencial: </strong>
+													<a href="Laboratorios/Laboratorio2/1.1.4.6%20Configuring%20Basic%20Router%20Settings%20with%20IOS%20CLI_presencial.docx">Configuración de una red con 
 													acceso remoto vía el 
-													protocolo SSH
+													protocolo SSH</a></li>
+													<li class="auto-style25">
+													<strong>Remoto: </strong>
+													<a href="Laboratorios/Laboratorio2/1.1.4.6%20Configuring%20Basic%20Router%20Settings%20with%20IOS%20CLI_remoto.docx">Configuración de una red con 
+													acceso remoto vía el 
+													protocolo SSH</a>
 													<ul>
 														<li class="auto-style25">
 														<strong>Archivo pkt:</strong>
