--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -1285,10 +1285,10 @@
 												<li>
 												<font
  size="-1" face="Arial,Helvetica"><b>Reto 1: </b>
-												Configuración de una red</font><ul>
+												<a href="Retos/Reto1/Reto1_matriculaA.docx">Configuración de una red</a></font><ul>
 													<li class="auto-style25">
 													<strong>Archivo pkt:</strong>
-													Reto1.pkt</li>
+													<a href="Retos/Reto1/reto1_matricula.pkt">Reto1.pkt</a></li>
 													<li class="auto-style25">
 													<strong>Comandos:</strong>
 													<a href="Laboratorios/Laboratorio3/Comandos.pdf">Comandos</a></li>
