--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -2056,9 +2056,9 @@
 												<li>
 												<b>Reto 2: </b>
 												<font
- size="-1" face="Arial,Helvetica">Configuración de los equipos de 
+ size="-1" face="Arial,Helvetica"><a href="Retos/Reto2/Reto2_matricula.docx">Configuración de los equipos de 
 									   interconexión de la red local de una 
-									   organización</font> <span class="auto-style27">
+									   organización</a></font> <span class="auto-style27">
 												(Fecha límite: Miércoles 8 de 
 												Septiembre hasta las 
 												23:59 p.m.)</span><ul>
