--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -2222,8 +2222,8 @@
 									   <li class="auto-style48">
 									   <font
  size="-1" face="Arial,Helvetica"><b>Reto 3: </b>
-									   Prepárate para tu examen parcial y 
-									   configura ruteo estático y ruteo dinámico</font><ul>
+									   <a href="Retos/Reto3/Reto3_Ago21.docx">Prepárate para tu examen parcial y 
+									   configura ruteo estático y ruteo dinámico</a></font><ul>
 										   <li class="auto-style48">
 										   <font
  size="-1" face="Arial,Helvetica"><b>Archivo pkt: </b>
