--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -2502,9 +2502,9 @@
 													<li>
 													<font
  size="-1" face="Helvetica, Arial, sans-serif"><strong>Laboratorio 6: </strong>
-													Configuración de 
+													<a href="Laboratorios/Laboratorio6/Laboratorio6.docx">Configuración de 
 													una red con tráfico 
-													convergente</font><ul>
+													convergente</a></font><ul>
 														<li>
 														<font
  size="-1" face="Arial,Helvetica"><strong>Archivo pkt:</strong>
