--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -6323,8 +6323,8 @@
 													<li>
 													<font
  size="-1" face="Helvetica, Arial, sans-serif"><strong>Laboratorio 11: </strong>
-													Instalación del servicio 
-													DHCP</font><ul>
+													<a href="Laboratorios/Laboratorio11/8.1.2.4%20Configuring%20Basic%20DHCPv4%20on%20a%20Router.docx">Instalación del servicio 
+													DHCP</a></font><ul>
 														<li class="auto-style28">
 														<a href="Laboratorios/Laboratorio11/Lab11.pkt">
 														<span class="auto-style25">Lab11.pkt</span></a></li>
