--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -7270,7 +7270,7 @@
                                        <li class="auto-style6">
 									   <font
  size="-1" face="Helvetica, Arial, sans-serif">
-									   Caso de estudio</font><ul>
+									   <a href="https://experiencia21.tec.mx/courses/187077/assignments/5170214">Caso de estudio</a></font><ul>
 										   <li class="auto-style67">
 										   <span class="auto-style58">
 										   caso_matricula.pkt</span></li>
