--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -7136,10 +7136,6 @@
 																  <font
  size="-1" face="Helvetica, Arial, sans-serif"><a href="Laboratorios/Laboratorio12/9.2.2.6%20Dynamic%20and%20Static%20NAT_presencial.docx">9.2.2.6 Configuring Dynamic 
 													and Static NAT</a></font></li>
-																  <li>
-																  <font
- size="-1" face="Helvetica, Arial, sans-serif"><a href="Laboratorios/Laboratorio12/9.2.3.7%20Port%20Address%20Translation%20PAT_presencial.docx">9.2.3.7 Configuring Port 
-													Address Translation (PAT)</a></font></li>
 															  </ul>
 															  </li>
 &nbsp;<li><span class="auto-style28"><span class="auto-style62">
@@ -7279,9 +7275,9 @@
 									   <a href="https://experiencia21.tec.mx/courses/187077/assignments/5170214">Caso de estudio</a></font><ul>
 										   <li class="auto-style67">
 										   <span class="auto-style58">
-										   caso_matricula.pkt</span></li>
+										   <a href="Retos/CasoEstudio/caso_matriculaAgo21.pkt">caso_matricula.pkt</a></span></li>
 										   <li class="auto-style68">
-										   caso_matrícula.docx</li>
+										   <a href="Retos/CasoEstudio/caso_matricula.docx">caso_matrícula.docx</a></li>
 									   </ul>
 									   </li>
                                                                         
