--- a/CalendarioAgo21/Examenes/FinalPractico/final.html
+++ b/CalendarioAgo21/Examenes/FinalPractico/final.html
@@ -12,6 +12,7 @@
 <p><img src="img3.jpg" /></p>
 <p><img src="img6.jpg" /></p>
 <p><img src="img5.jpg" /></p>
+<p><img src="img7.jpg" /></p>
 
 </body>
 
