--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -8404,6 +8404,9 @@
 													<a href="https://experiencia21.tec.mx/courses/187077/modules/items/9040044">Interconexión de protocolos de ruteo 
 									   distintos</a></span></font><ul>
 														<li class="auto-style70">
+														<a href="Ejercicios/Ejercicio17/Ejer17.pdf">
+														Ejercicio 17</a></li>
+														<li class="auto-style70">
 														<a href="Ejercicios/Ejercicio17/Archivos/Ejer17.pkt">
 														Ejer17.pkt</a></li>
 														<li class="auto-style69">
@@ -8444,7 +8447,7 @@
 													<li class="auto-style6">
 													<font face="Helvetica, Arial, sans-serif" size="-1">
 													<span class="auto-style27">
-													Caso de estudio</span>
+													<strong>Caso de estudio</strong>.</span>
 													<span class="auto-style27">
 													Fecha de entrega: Jueves 18 
 													de Noviembre hasta las 23:59 
