--- a/CalendarioAgo21/index.html
+++ b/CalendarioAgo21/index.html
@@ -8674,6 +8674,8 @@
 													de ruteo distintos</a></span></font></span><ul>
 														<li class="auto-style69">
 														<span class="auto-style58">
+														<a href="Ejercicios/Ejercicio18/Ejer18.pdf">Ejer18.pdf</a></span><li class="auto-style69">
+														<span class="auto-style58">
 														<a href="Ejercicios/Ejercicio18/Ejer18.pkt">
 														Ejer18.pkt</a></li>
 														</span>
@@ -8974,7 +8976,7 @@
 								<font size="+2" color="#663366" face="Arial,Helvetica">
 								<small>
 						  	    <span class="auto-style40">
-								Examen Final</span><br>
+								<a href="Examenes/Final.html">Examen Final</a></span><br>
                                                                         
                                     </small></font><font
  color="#663366"><big><font size="-1"
