--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -180,14 +180,6 @@
 	font-size: -1;
 }
 
-  .auto-style26 {
-	text-align: center;
-	border-width: 1px;
-	color: #FFFFFF;
-	font-weight: bold;
-	font-size: medium;
-}
-
   </style>
 </head>
   <body>
@@ -444,13 +436,36 @@
 									   <li>                             
                              		   <font class="auto-style63">
 									   <span class="auto-style97">Material de clase:                                     
-									   </span><span class="auto-style58">
+									   </span></font></li>
+									   <li>                             
+                             		   <font class="auto-style63">
+									   <span class="auto-style58">
 									   <a href="Presentaciones/IF_ModeloOSI.pptx">
 									   2. Modelo OSI</a>,
+									   </span></font></li>
+									   <li>                             
+                             		   <font class="auto-style63">
+									   <span class="auto-style58">
 									   <a href="Presentaciones/IF_ProtocolosOSI.pptx">
-									   3. Protocolos OSI </a>y 4.
+									   3. Protocolos OSI</a></span></font></li>
+									   <li>                             
+                             		   <font class="auto-style63">
+									   <span class="auto-style58">
+									   4.
 									   <a href="Presentaciones/IF_ModeloTCP_IP.pptx">
 									   Modelo TCP/IP</a></span></font></li>
+									   <li>                             
+                             		   Capa Física</li>
+									   <li>                             
+                             		   Dispositivos de red</li>
+									   <li>                             
+                             		   Redes inalámbricas</li>
+									   <li>                             
+                             		   Medios de comunicación</li>
+									   <li>                             
+                             		   Topologías</li>
+									   <li>                             
+                             		   </li>
 									   <li>                             
 												  <font
  size="-1" face="Arial,Helvetica"><b>Clase:                     </b>
