--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -698,8 +698,8 @@
                                                                         
 									   <li class="auto-style52">
 									   <font
- size="-1" class="auto-style25"><b>Actividad 7:<span class="auto-style27">
-									   </span></b><span class="auto-style27">El diseño de subredes y la importancia de 
+ size="-1" class="auto-style25"><span class="auto-style51">Actividad 7: </span>
+									   <span class="auto-style27">El diseño de subredes y la importancia de 
 									   las máscaras de subred.
 									   <span class="auto-style25">(Miércoles 25 de Mayo hasta las 
 									   23:59)</span></span></font></li>
