--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -462,12 +462,15 @@
 									   </span></font>
 									   <ul>
 										   <li><font class="auto-style63">
-										   <span class="auto-style58">5.
-									   Modelo TCP/IP</span></font></li>
-										   <li class="auto-style25">6. Medios de 
-										   comunicación</li>
-										   <li class="auto-style25">7. 
-										   Arquitectura de una red</li>
+										   <span class="auto-style58">
+										   <a href="Presentaciones/5_ModeloTCP_IP.pdf">5.
+									   Modelo TCP/IP</a></span></font></li>
+										   <li class="auto-style25">
+										   <a href="Presentaciones/6_MediosComunicacion.pdf">6. Medios de 
+										   comunicación</a></li>
+										   <li class="auto-style25">
+										   <a href="Presentaciones/7_ArquitecturaRed.pdf">7. 
+										   Arquitectura de una red</a></li>
 									   </ul>
 									   </li>
                                                                         
