--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -545,9 +545,11 @@
 														<li>
 														<font class="auto-style63">
 														<span class="auto-style58">
-														8. Redes inalámbricas</span></font></li>
+														<a href="Presentaciones/8_RedesInalambricas.pdf">8. Redes inalámbricas</a></span></font></li>
 														<li class="auto-style25">
-														9. Tipos de señales</li>
+														<a href="Presentaciones/9_Capa_fisica.pdf">9. Capa física</a></li>
+														<li class="auto-style25">
+														10. Tipos de señales</li>
 													</ul>
 													</li>
 													<li class="auto-style25">
@@ -579,9 +581,9 @@
  size="-1" class="auto-style25"><b>Material de clase:                                     </b></font>
 													<ul>
 														<li class="auto-style25">
-														10. Topologías</li>
+														11. Topologías</li>
 														<li class="auto-style25">
-														11.
+														12.
 														<font
  size="-1" class="auto-style25">Cableado estructurado</font></li>
 													</ul>
