--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -603,9 +603,9 @@
                                                                         
 													<li>
 									   			 <font
- size="-1" class="auto-style25"><b>Actividad 6: </b>El diseño de una red apegado 
+ size="-1" class="auto-style25"><b>Actividad 6: </b><a href="Actividades/Actividad6_Cableado_estructurado/5_Diseño_cableado_estructurado.docx">El diseño de una red apegado 
 													a los estándares de cableado 
-													estructurado
+													estructurado</a>
 													<span class="auto-style27">
 													(Lunes 23 de Mayo hasta las 23:59)</span></font></li>
                                                                         
