--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -671,16 +671,17 @@
 									   <ul>
 										   <li>
 										   <font
- size="-1" class="auto-style25">12. Direccionamiento</font></li>
-										   <li>13. Subneteo (Longitud fija)</li>
+ size="-1" class="auto-style25"><a href="Presentaciones/12_Direccionamiento.pptx">12. Direccionamiento</a></font></li>
+										   <li>
+										   <a href="Presentaciones/13_Subneteo.pptx">13. Subneteo (Longitud fija)</a></li>
 									   </ul>
 									   </li>
 									   <li>
 									   <strong>Ejercicio 1</strong>.
-									   Esquemas de direccionamiento</li>
+									   <a href="Ejercicios/Subredes/Ejercicio1_Direccionamiento.docx">Esquemas de direccionamiento</a></li>
 									   <li>
 									   <strong>Ejercicio 2</strong>.
-									   Esquemas de direccionamiento y subneteo</li>
+									   <a href="Ejercicios/Subredes/Ejercicio2_Subredes.docx">Esquemas de direccionamiento y subneteo</a></li>
 									   <li>
 									   <strong>Revisión de dudas:</strong> 
 									   Actividad 6</li>
@@ -694,8 +695,9 @@
 									   <li class="auto-style52">
 									   <font
  size="-1" class="auto-style25"><span class="auto-style51">Actividad 7: </span>
-									   <span class="auto-style27">El diseño de subredes y la importancia de 
-									   las máscaras de subred.
+									   <span class="auto-style27">
+									   <a href="Actividades/Actividad7_Diseño_subredes/7_Diseño_de_subredes.docx">El diseño de subredes y la importancia de 
+									   las máscaras de subred</a>.
 									   <span class="auto-style25">(Miércoles 25 de Mayo hasta las 
 									   23:59)</span></span></font></li>
 								</ul>
@@ -727,7 +729,7 @@
  size="-1" class="auto-style25"><b>Material de clase:                                     </b></font>
 									   <ul>
 										   <li><span class="auto-style25">
-										   13,
+										   13.
 										   Subneteo (Longitud fija</span><o:p><span class="auto-style25">)</span></o:p></li>
 										   <li class="auto-style25">14. Subneteo 
 										   (Longitud variable - VLSM)<o:p></o:p></li>
