--- a/Calendario2022/index.html
+++ b/Calendario2022/index.html
@@ -680,9 +680,6 @@
 									   <strong>Ejercicio 1</strong>.
 									   <a href="Ejercicios/Subredes/Ejercicio1_Direccionamiento.docx">Esquemas de direccionamiento</a></li>
 									   <li>
-									   <strong>Ejercicio 2</strong>.
-									   <a href="Ejercicios/Subredes/Ejercicio2_Subredes.docx">Esquemas de direccionamiento y subneteo</a></li>
-									   <li>
 									   <strong>Revisión de dudas:</strong> 
 									   Actividad 6</li>
 								</ul>
@@ -731,19 +728,27 @@
 										   <li><span class="auto-style25">
 										   13.
 										   Subneteo (Longitud fija</span><o:p><span class="auto-style25">)</span></o:p></li>
-										   <li class="auto-style25">14. Subneteo 
-										   (Longitud variable - VLSM)<o:p></o:p></li>
 									   </ul>
 									   </li>
 									   <li class="auto-style63">
+									   <strong><span class="auto-style58">Ejercicio 1</span></strong><span class="auto-style58">.
+									   </span>
+									   <a href="Ejercicios/Subredes/Ejercicio1_Direccionamiento.docx">
+									   <span class="auto-style58">Esquemas de direccionamiento</span></a></li>
+									   <li class="auto-style63">
+									   <strong><span class="auto-style58">Ejercicio 2</span></strong><span class="auto-style58">.
+									   </span>
+									   <a href="Ejercicios/Subredes/Ejercicio2_Subredes.docx">
+									   <span class="auto-style58">Esquemas de direccionamiento y subneteo</span></a></li>
+									   <li class="auto-style63">
 									   <span class="auto-style58"><strong>Ejercicio 
 									   3</strong>.
-									   Subredes</span></li>
+									   <a href="Ejercicios/Subredes/Ejercicio3_Subredes.docx">Subredes</a></span></li>
 									   <li class="auto-style63"><strong>
 									   <span class="auto-style58">Ejercicio 4</span></strong><span class="auto-style58">.
-									   Subredes</span></li>
+									   <a href="Ejercicios/Subredes/Ejercicio4_Subredes.docx">Subredes</a></span></li>
 									   <li class="auto-style25"><strong>Revisión 
-									   de dudas: </strong>Actividad 7</li>
+									   de dudas: </strong>Actividad 5</li>
 								</ul>
 								<p>
                                                                         
